sumo/tests/duarouter/trips/errors/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalSpeed definition for vehicle ''
Quitting (on error).
